# OSNotificationX

./: .gitignore  README.md  install-update.sh  meson.build
data/: meson.build  osnotificationx.desktop
preview/: README.md  index.html  render-preview.sh  styles.css
scripts/: check-notification-log.sh  send-test-notifications.sh
src/: meson.build  osnotificationx-plugin.c  osnx-drawer.c  osnx-drawer.h  osnx-hidden-store.c  osnx-hidden-store.h  osnx-log-client.c  osnx-log-client.h  osnx-log-entry.c  osnx-log-entry.h  osnx-notify-settings.c  osnx-notify-settings.h  osnx-style.c  osnx-style.h
tests/: meson.build  test-hidden-store.c  test-log-entry.c
