install_data(
  'osnotificationx.desktop',
  install_dir: osnx_panel_desktop_dir,
)

install_data(
  '../assets/cloth_bg.png',
  install_dir: osnx_data_dir,
)

install_data(
  '../assets/applet_icon.png',
  install_dir: osnx_data_dir,
)

install_data(
  '../assets/applet_icon.png',
  rename: 'osnotificationx.png',
  install_dir: join_paths(prefix, datadir, 'icons', 'hicolor', '512x512', 'apps'),
)
